<resources>
    <string name="app_name">Кулинариум</string>
    <string name="none"></string>

    <!-- DialogImage -->
    <string name="dialog_image_make_photo">To make a photo</string>
    <string name="dialog_image_select">Select from gallery</string>
    <string name="dialog_image_choose">Select image</string>

    <!-- MainActivity -->
    <string name="main_activity_create_dialog">Create Account</string>
    <string name="main_activity_name">Name</string>
    <string name="main_activity_name_edit">Your name</string>
    <string name="main_activity_login">Login</string>
    <string name="main_activity_login_edit">Email</string>
    <string name="main_activity_password">Password</string>
    <string name="main_activity_password_confirm">Confirm password</string>
    <string name="main_activity_password_edit">Your secret password</string>
    <string name="main_activity_login_in">Log in</string>
    <string name="main_activity_or">or</string>
    <string name="main_activity_no_account">No account?</string>
    <string name="main_activity_remember">Remember me</string>
    <string name="main_activity_no_password">Forgot your password?</string>

    <string name="error_empty">Input fields are empty</string>
    <string name="error_internet">No internet connection</string>
    <string name="error_email">Wow, there is no account with this email yet</string>
    <string name="error_password">Incorrect password</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_email_use">This email is already in use</string>
    <string name="error_password_incorrect">Password and repeat password do not match</string>
    <string name="error_password_too_easy">Password is too simple</string>

    <string name="loading">Please, wait....</string>

    <!-- RecipesActivity -->
    <string name="recipes_activity_search">Name, ingredients, type…</string>
    <string name="recipes_activity_no_elements">Wow, there are no recipes here yet, lets add them</string>
    <string name="sort_AZ">A-Z</string>
    <string name="sort_ZA">Z-A</string>
    <string name="sort_new">New</string>
    <string name="sort_ld">Old</string>
    <string name="recipes_activity_add">Add</string>

    <!-- RecipePreviewDialog -->
    <string name="recipe_preview_dialog_minute">m</string>
    <string name="recipe_preview_dialog_kcal">kcal</string>
    <string name="recipe_preview_dialog_ingredients">Ingredients</string>
    <string name="recipe_preview_dialog_button">Detailed</string>

    <!-- DeleteDialog -->
    <string name="delete_dialog_title">Delete recipe?</string>
    <string name="delete_dialog_message">Are you sure you want to delete the recipe? This action cannot be undone</string>
    <string name="delete_dialog_delete">Delete</string>

    <!-- CreateActivity -->
    <string name="create_activity_name">Recipes name</string>
    <string name="create_activity_time">minutes</string>
    <string name="create_activity_calories">calories</string>
    <string name="create_activity_category">Category</string>
    <string name="create_activity_description">Description</string>
    <string name="create_activity_ingredients">ingredients name</string>
    <string name="create_activity_count">count</string>
    <string name="create_activity_steps">New step</string>
    <string name="create_activity_save">save</string>
    <string name="create_activity_update">Successfully saved</string>
    <string name="create_activity_create">Successfully created</string>
    <string name="create_activity_empty">Fields are empty</string>

    <!-- WarningDialogCreate -->
    <string name="warning_create_dialog_title">Cancel creation</string>
    <string name="warning_create_dialog_message">Are you sure you want to close this window? Data will NOT be saved</string>
    <string name="warning_create_dialog_ok">Close</string>
    <string name="warning_create_dialog_no">Cansel</string>

</resources>