<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_margin="14dp"
            android:paddingTop="60dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="60dp"
            android:background="@drawable/background_white"
            android:elevation="20dp">

            <TextView
                android:text="@string/main_activity_login"
                style="@style/EntranceTextTitle"/>
            <EditText
                android:id="@+id/edit_text_login"
                android:hint="@string/main_activity_login_edit"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:layout_marginBottom="30dp"
                style="@style/EntranceEditeTextStyle"/>

            <TextView
                android:text="@string/main_activity_password"
                style="@style/EntranceTextTitle"/>
            <EditText
                android:id="@+id/edit_text_password"
                android:hint="@string/main_activity_password_edit"
                android:inputType="textPassword"
                android:autofillHints="emailAddress"
                style="@style/EntranceEditeTextStyle"/>

            <CheckBox
                android:id="@+id/check_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_remember"
                android:textColor="@color/black"
                android:fontFamily="@font/jost"
                android:textSize="20sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/text_enter"
                android:fontFamily="@font/jost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_login_in"
                android:textSize="22sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_main_dark"
                android:layout_gravity="center"
                android:elevation="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <View style="@style/MainActivity_Line_Gray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_activity_or"
                    android:fontFamily="@font/jost"
                    android:textColor="@color/gray_dark"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="8dp"/>
                <View style="@style/MainActivity_Line_Gray"/>
            </LinearLayout>


            <ImageView
                android:id="@+id/image_google"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/icon_google"
                android:padding="4dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/text_create_account"
                android:text="@string/main_activity_no_account"
                style="@style/EntranceTextHelp" />

            <TextView
                android:id="@+id/text_forgot_password"
                android:text="@string/main_activity_no_password"
                style="@style/EntranceTextHelp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>