<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:background="@drawable/background_white"
        android:gravity="center"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/warning_create_dialog_title"
            android:textColor="@color/black"
            android:fontFamily="@font/jost"/>

        <TextView
            android:id="@+id/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/warning_create_dialog_message"
            android:textColor="@color/black"
            android:fontFamily="@font/jost"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/warning_create_dialog_ok"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/jost"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/text_cansel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/warning_create_dialog_no"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/jost"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>