<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/list_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:background="#D3D3D3"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:gravity="top"
            android:background="@drawable/background_top_white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@drawable/background_search">

                <EditText
                    android:id="@+id/edit_text_search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/recipes_activity_search"
                    android:fontFamily="@font/jost"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_dark"
                    android:background="@color/none"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:paddingStart="10dp"
                    android:inputType="text"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:src="@drawable/icon_search"/>

            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/linear_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_new"
                        android:text="@string/sort_new"
                        style="@style/TextViewFilter"
                        android:layout_marginEnd="8dp"/>

                    <TextView
                        android:id="@+id/text_old"
                        android:text="@string/sort_ld"
                        style="@style/TextViewFilter"
                        android:layout_marginEnd="8dp"/>

                    <TextView
                        android:id="@+id/text_az"
                        android:text="@string/sort_AZ"
                        style="@style/TextViewFilter"
                        android:layout_marginEnd="8dp"/>

                    <TextView
                        android:id="@+id/text_za"
                        android:text="@string/sort_ZA"
                        style="@style/TextViewFilter"/>

                </LinearLayout>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:id="@+id/linear_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                </LinearLayout>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/image_arrow"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_arrow"/>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/linear_down_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_gray_fade"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:id="@+id/linear_no_element"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginBottom="40dp"
                android:orientation="vertical"
                android:clickable="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:textColor="@color/gray_dark"
                    android:padding="10dp"
                    android:fontFamily="@font/jost"
                    android:text="@string/recipes_activity_no_elements"
                    android:clickable="false"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="350dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/draw_arrow"
                    android:clickable="false"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                android:background="@drawable/background_main_dark">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_add"
                    android:layout_marginStart="40dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jost"
                    android:textSize="22sp"
                    android:text="@string/recipes_activity_add"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="40dp"/>

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>