<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foregroundGravity="bottom"
    android:layout_gravity="bottom"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:paddingBottom="20dp"
            android:background="@drawable/background_dialog_create"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_activity_steps"
                android:textColor="@color/black"
                android:fontFamily="@font/jost"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:id="@+id/image_food"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:background="@drawable/background_new_step"
                android:src="@drawable/icon_add_gray"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_time"/>

                <EditText
                    android:id="@+id/edit_time"
                    style="@style/EditTextInfo"
                    android:hint="@string/create_activity_time"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_activity_description"
                android:textColor="@color/black"
                android:fontFamily="@font/jost"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark"
                android:textSize="20sp"
                android:hint="@string/create_activity_description"
                android:inputType="textMultiLine"
                android:layout_marginBottom="10dp"/>



            <TextView
                android:id="@+id/text_enter"
                android:fontFamily="@font/jost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipes_activity_add"
                android:textSize="22sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="30dp"
                android:background="@drawable/background_main_dark"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>